# inverex-matching

./: .gitignore  README.md  pyproject.toml
src/nlp/: evaluation.py  setup.py
src/nlp/CTnlp/: clinical_trial.py  parsers.py
src/nlp/CTnlp/patient/: __init__.py
src/nlp/matching/: build_features.py  index_clinical_trials.py  keyword_matching.py  utils.py
src/nlp/preprocessing/: prepare_patients.py  prepare_trials.py
