[project]
name = "inverex-matching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "defusedxml>=0.7.1",
    "en-core-sci-sm",
    "en-ner-bc5cdr-md",
    "numpy==1.26.4",
    "pytrec-eval>=0.5",
    "rank-bm25>=0.2.2",
    "spacy==3.7.4",
    "medspacy==1.3.1",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
en-ner-bc5cdr-md = { url = "https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_ner_bc5cdr_md-0.5.4.tar.gz" }
en-core-sci-sm = { url = "https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_core_sci_sm-0.5.4.tar.gz" }
